--- a/SapGuiShortcutManager/GUI/MainWindow.xaml
+++ b/SapGuiShortcutManager/GUI/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SapGuiShortcutManager.GUI"
         mc:Ignorable="d"
-        Title="SAP GUI Shortcut Manager" Height="450" Width="800">
+        Title="SAP GUI Shortcut Manager" Height="495" Width="800">
     <Grid>
-        <local:Panel x:Name="mPanel"></local:Panel>
+        <TabControl x:Name="mMainTab" 
+                    Grid.Row="0">
+            <TabItem Header="Home">
+                <local:Panel x:Name="mPanel"></local:Panel>
+            </TabItem>
+        </TabControl>
+        <Button x:Name="mLogonButton" 
+                Grid.Row="1"
+                Height="30"
+                Width="100"
+                Content="SAP Logon"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
